refactor: update translations for Buckaroo Hosted Fields in multiple languages

--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -458,10 +458,33 @@
 "When the \"NO\" option is selected, the issuer selection for iDEAL will not be displayed in the checkout. Instead, customers will be redirected to a separate page where they can choose their iDEAL issuer (i.e., their bank). On the other hand, selecting the "Enable" option will display the issuer selection directly in the checkout. It's important to note that enabling this option will incur additional costs from Buckaroo, estimated at around €0.002 for each transaction. For precise cost details, please reach out to <a href=\"mailto:wecare@buckaroo.nl\">Buckaroo</a> directly.","When the \"NO\" option is selected, the issuer selection for iDEAL will not be displayed in the checkout. Instead, customers will be redirected to a separate page where they can choose their iDEAL issuer (i.e., their bank). On the other hand, selecting the "Enable" option will display the issuer selection directly in the checkout. It's important to note that enabling this option will incur additional costs from Buckaroo, estimated at around €0.002 for each transaction. For precise cost details, please reach out to <a href=\"mailto:wecare@buckaroo.nl\">Buckaroo</a> directly.","Cuando se selecciona la opción \"NO\", la selección del emisor para iDEAL no se mostrará en el proceso de compra. En cambio, los clientes serán redirigidos a una página separada donde podrán elegir su emisor de iDEAL (es decir, su banco). Por otro lado, seleccionar la opción "Habilitar" mostrará la selección del emisor directamente en el proceso de compra. Es importante señalar que habilitar esta opción implicará costos adicionales por parte de Buckaroo, estimados en alrededor de €0.002 por cada transacción. Para obtener detalles precisos sobre los costos, por favor comuníquese directamente con <a href=\"mailto:wecare@buckaroo.nl\">Buckaroo</a>."
 "Show Issuer Selection in the Checkout","Mostrar la selección de banco en el proceso de compra."
 "When the \"NO\" option is selected, the issuer selection for iDEAL will not be displayed in the checkout. Instead, customers will be redirected to a separate page where they can choose their iDEAL issuer (i.e., their bank). On the other hand, selecting the "Enable" option will display the issuer selection directly in the checkout. It's important to note that enabling this option will incur additional costs from Buckaroo. For precise cost details, please reach out to <a href=\"mailto:wecare@buckaroo.nl\">Buckaroo</a> directly.","Cuando se selecciona la opción \"NO\", la selección del emisor para iDEAL no se mostrará en el proceso de compra. En cambio, los clientes serán redirigidos a una página separada donde podrán elegir su emisor de iDEAL (es decir, su banco). Por otro lado, seleccionar la opción "Habilitar" mostrará la selección del emisor directamente en el proceso de compra. Es importante señalar que habilitar esta opción implicará costos adicionales por parte de Buckaroo. Para obtener detalles precisos sobre los costos, por favor comuníquese directamente con <a href=\"mailto:wecare@buckaroo.nl\">Buckaroo</a>."
+"Jan","Ene"
+"Feb","Feb"
+"Mar","Mar"
+"Apr","Abr"
+"May","May"
+"Jun","Jun"
+"Jul","Jul"
+"Aug","Ago"
+"Sep","Sep"
+"Oct","Oct"
+"Nov","Nov"
+"Dec","Dic"
+"Mo","Lu"
+"Tu","Ma"
+"We","Mi"
+"Th","Ju"
+"Fr","Vi"
+"Sa","Sa"
+"Su","Do"
 "Buckaroo Hosted Fields Client ID:","Buckaroo Hosted Fields Client ID:"
 "Buckaroo Hosted Fields Client Secret:","Buckaroo Hosted Fields Client Secret:"
 "Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Ingrese su Buckaroo Hosted Fields Client ID, disponible en Buckaroo Plaza en → Configuración → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Registro de token</a>."
 "Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Ingrese su Buckaroo Hosted Fields Client Secret, disponible en Buckaroo Plaza en → Configuración → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Registro de token</a>."
+"Cardholder Name:","Nombre del titular de la tarjeta:"
+"Card Number:","Número de tarjeta:"
+"Expiry Date:","Fecha de vencimiento:"
+"CVC:","CVC:"
 "Apple Pay checkout type","Tipo de pago con Apple Pay en el checkout"
 "Inline (Integrated in checkout)","Integrado (Integrado en el checkout)"
 "Redirect (Buckaroo Hosted Payment Page)","Redirección (Página de pago alojada por Buckaroo)"
