--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -475,10 +475,17 @@
 "Select your giftcard supplier","Sélectionnez votre fournisseur de cartes cadeaux"
 "iDIN can be used in different modes, based on when you want iDIN to be required as an additional verification.<br/><strong>Global Mode:</strong> Requires iDIN verification for all products.<br/><strong>Specific Products Mode:</strong> Enables iDIN for selected products via the Magento 2 catalog settings.<br/><strong>Product Categories Mode:</strong> Configures iDIN for specific product categories.","iDIN peut être utilisé dans différents modes, en fonction de quand vous souhaitez que iDIN soit requis comme vérification supplémentaire.<br/><strong>Mode global:</strong> Exige la vérification iDIN pour tous les produits.<br/><strong>Mode Produits spécifiques:</strong> Active iDIN pour les produits sélectionnés via les paramètres du catalogue Magento 2.<br/><strong>Mode Catégories de produits:</strong> Configure iDIN pour des catégories de produits spécifiques."
 "You have canceled the payment request.","Vous avez annulé la demande de paiement"
+"Jan","Jan"
 "Feb","Fév"
+"Mar","Mar"
 "Apr","Avr"
 "May","Mai"
+"Jun","Juin"
+"Jul","Juil"
 "Aug","Aoû"
+"Sep","Sep"
+"Oct","Oct"
+"Nov","Nov"
 "Dec","Déc"
 "Mo","Lu"
 "Tu","Ma"
@@ -491,6 +498,10 @@
 "Buckaroo Hosted Fields Client Secret:","Buckaroo Hosted Fields Client Secret:"
 "Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Entrez votre Buckaroo Hosted Fields Client ID, disponible depuis le Buckaroo Plaza dans → Paramètres → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Enregistrement du jeton</a>."
 "Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Entrez votre Buckaroo Hosted Fields Client Secret, disponible depuis le Buckaroo Plaza dans → Paramètres → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Enregistrement du jeton</a>."
+"Cardholder Name:","Nom du titulaire de la carte:"
+"Card Number:","Numéro de carte:"
+"Expiry Date:","Date d'expiration:"
+"CVC:","CVC:"
 "Apple Pay checkout type","Type de passage en caisse Apple Pay"
 "Inline (Integrated in checkout)","Intégré (Intégré au passage en caisse)"
 "Redirect (Buckaroo Hosted Payment Page)","Redirection (Page de paiement hébergée par Buckaroo)"
