--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -475,9 +475,18 @@
 "Sort Credit-debitcard issuers","Volgorde van de Credit-debitcard issuers"
 "iDIN can be used in different modes, based on when you want iDIN to be required as an additional verification.<br/><strong>Global Mode:</strong> Requires iDIN verification for all products.<br/><strong>Specific Products Mode:</strong> Enables iDIN for selected products via the Magento 2 catalog settings.<br/><strong>Product Categories Mode:</strong> Configures iDIN for specific product categories.","iDIN kan in verschillende modi worden gebruikt, afhankelijk van wanneer je iDIN als extra verificatie wilt vereisen.<br/><strong>Globale modus:</strong> Vereist iDIN-verificatie voor alle producten.<br/><strong>Specifieke productmodus:</strong> Activeert iDIN voor geselecteerde producten via de Magento 2-catalogusinstellingen.<br/><strong>Productcategorieën modus:</strong> Configureert iDIN voor specifieke productcategorieën."
 "You have canceled the payment request.","Vous avez annulé la demande de paiement"
+"Jan","Jan"
+"Feb","Feb"
 "Mar","Mrt"
+"Apr","Apr"
 "May","Mei"
+"Jun","Jun"
+"Jul","Jul"
+"Aug","Aug"
+"Sep","Sep"
 "Oct","Okt"
+"Nov","Nov"
+"Dec","Dec"
 "Mo","Ma"
 "Tu","Di"
 "We","Wo"
@@ -487,5 +496,9 @@
 "Su","Zo"
 "Buckaroo Hosted Fields Client ID:","Buckaroo Hosted Fields Client ID:"
 "Buckaroo Hosted Fields Client Secret:","Buckaroo Hosted Fields Client Secret:"
-"Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier je Buckaroo Hosted Fields Client ID in, die je kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>."
-"Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier je Buckaroo Hosted Fields Client Secret in, die je kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>."
+"Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Entrez votre Buckaroo Hosted Fields Client ID, disponible depuis le Buckaroo Plaza dans → Paramètres → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Enregistrement du jeton</a>."
+"Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Entrez votre Buckaroo Hosted Fields Client Secret, disponible depuis le Buckaroo Plaza dans → Paramètres → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Enregistrement du jeton</a>."
+"Cardholder Name:","Naam kaarthouder:"
+"Card Number:","Kaartnummer:"
+"Expiry Date:","Vervaldatum:"
+"CVC:","CVC:"
