--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -651,13 +651,18 @@
 "Min order amount for B2B (in Base Currency)","Minimale bestelhoeveelheid voor B2B (in standaard valuta)"
 "Max order amount for B2B (in Base Currency)","Maximale bestelhoeveelheid voor B2B (in standaard valuta)"
 "Enable iDIN verification","iDIN verificatie inschakelen"
-"Buckaroo Hosted Fields Client ID:","Buckaroo Hosted Fields Client ID:"
-"Buckaroo Hosted Fields Client Secret:","Buckaroo Hosted Fields Client Secret:"
-"Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier je Buckaroo Hosted Fields Client ID in, die je kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>."
-"Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier je Buckaroo Hosted Fields Client Secret in, die je kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>.
-""Mar","Mrt"
+"Jan","Jan"
+"Feb","Feb"
+"Mar","Mrt"
+"Apr","Apr"
 "May","Mei"
+"Jun","Jun"
+"Jul","Jul"
+"Aug","Aug"
+"Sep","Sep"
 "Oct","Okt"
+"Nov","Nov"
+"Dec","Dec"
 "Mo","Ma"
 "Tu","Di"
 "We","Wo"
@@ -665,6 +670,14 @@
 "Fr","Vr"
 "Sa","Za"
 "Su","Zo"
+"Buckaroo Hosted Fields Client ID:","Buckaroo Hosted Fields Client ID:"
+"Buckaroo Hosted Fields Client Secret:","Buckaroo Hosted Fields Client Secret:"
+"Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier je Buckaroo Hosted Fields Client ID in, die je kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>."
+"Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Voer hier je Buckaroo Hosted Fields Client Secret in, die je kunt verkrijgen vanuit de Buckaroo Plaza bij → Instellingen → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Tokenregistratie</a>."
+"Cardholder Name:","Naam kaarthouder:"
+"Card Number:","Kaartnummer:"
+"Expiry Date:","Vervaldatum:"
+"CVC:","CVC:"
 "Apple Pay checkout type","Apple Pay afrekenmodus"
 "Inline (Integrated in checkout)","Inline (Geïntegreerd in de checkout)"
 "Redirect (Buckaroo Hosted Payment Page)","Redirect (Buckaroo betaalpagina)"
