update: add CVC tooltip functionality for credit card input fields

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -1,4 +1,5 @@
 "Buckaroo payment methods","Buckaroo-Zahlungsmethoden"
+"The CVC/CVV code is a 3 or 4-digit security code on your credit card.","Der CVC/CVV-Code ist ein 3 oder 4-stelliger Sicherheitscode auf Ihrer Kreditkarte."
 "Buckaroo Payment Methods","Buckaroo-Zahlungsmethoden"
 "iDEAL","iDEAL"
 "Enable iDEAL","iDEAL aktivieren"
