--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,4 +1,5 @@
 "Select a Credit Card or Debit Card:","Select Credit / Debit Card:"
+"The CVC/CVV code is a 3 or 4-digit security code on your credit card.","The CVC/CVV code is a 3 or 4-digit security code on your credit card."
 "Name on card:","Cardholder:"
 "Bank account holder","Account holder name:"
 "Bank account number","Account number (IBAN):"
