--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -1,4 +1,5 @@
 "Buckaroo payment methods","Modes de paiement Buckaroo"
+"The CVC/CVV code is a 3 or 4-digit security code on your credit card.","Le code CVC/CVV est un code de sécurité à 3 ou 4 chiffres figurant sur votre carte de crédit."
 "Buckaroo Payment Methods","Modes de paiement Buckaroo"
 "iDEAL","iDEAL"
 "Enable iDEAL","Activer iDEAL"
