--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -1,4 +1,5 @@
 "Buckaroo payment methods","Buckaroo betaalmethoden"
+"The CVC/CVV code is a 3 or 4-digit security code on your credit card.","De CVC/CVV-code is een 3 of 4-cijferige beveiligingscode op je creditcard."
 "Buckaroo Payment Methods","Buckaroo betaalmethoden"
 "iDEAL","iDEAL"
 "Enable iDEAL","iDEAL inschakelen"
