--- a/i18n/de_CH.csv
+++ b/i18n/de_CH.csv
@@ -502,3 +502,4 @@
 "Card Number:","Kartennummer:"
 "Expiry Date:","Ablaufdatum:"
 "CVC:","CVC:"
+"Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1""","Bestellung reaktiviert: Zahlung nach Stornierung abgeschlossen (Push-Benachrichtigung erhalten). Transaktions-ID: ""%1"""
