--- a/i18n/fr_BE.csv
+++ b/i18n/fr_BE.csv
@@ -502,3 +502,4 @@
 "Card Number:","Numéro de carte:"
 "Expiry Date:","Date d'expiration:"
 "CVC:","CVC:"
+"Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1""","Commande réactivée: Paiement complété après annulation (Notification push reçue). ID de transaction: ""%1"""
