--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -502,3 +502,4 @@
 "Card Number:","Kaartnummer:"
 "Expiry Date:","Vervaldatum:"
 "CVC:","CVC:"
+"Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1""","Bestelling gereactiveerd: Betaling voltooid na annulering (Push notificatie ontvangen). Transactie ID: ""%1"""
