feature: add bank transfer details to success page, support different languages

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -684,3 +684,12 @@
 "Redirect (Buckaroo Hosted Payment Page)","Redirect (Buckaroo betaalpagina)"
 "Select Inline to embed Apple Pay directly within the Magento checkout. Select Redirect to send customers to Buckaroo's secure Hosted Payment Page. Note: When using the Redirect option, Apple Pay can only be offered in the checkout (not in other areas like the mini-cart or product page).","Kies Inline om Apple Pay direct in de Magento-checkout te integreren. Kies Redirect om klanten door te sturen naar de beveiligde Hosted Payment Page van Buckaroo. Let op: Bij gebruik van de Redirect-optie kan Apple Pay alleen worden aangeboden in de reguliere checkout (niet in andere onderdelen zoals de mini-cart of productpagina)."
 "Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1""","Bestelling gereactiveerd: Betaling voltooid na annulering (Push notificatie ontvangen). Transactie ID: ""%1"""
+"Transfer","Overboeking"
+"Thank you for your order. You have chosen to pay by transfer. To complete your order, please transfer the outstanding amount, %1, using the details below.","Bedankt voor uw bestelling. U heeft gekozen om per overboeking te betalen. Om uw bestelling af te ronden, verzoeken wij u het openstaande bedrag, %1, over te boeken met behulp van de onderstaande gegevens."
+"Amount","Bedrag"
+"Payment reference","Betalingskenmerk"
+"Accountholder","Rekeninghouder"
+"IBAN","IBAN"
+"BIC","BIC"
+"NB","Let op"
+"To ensure that your payment can be processed smoothly, you must quote the payment reference %1 in the description of your transfer. This will enable faster processing of the payment.","Voor een goede verwerking dient u het betalingskenmerk %1 in de omschrijving van uw overboeking te vermelden. Hiermee kan de betaling sneller afgehandeld worden."
