--- a/i18n/be_FR.csv
+++ b/i18n/be_FR.csv
@@ -24,3 +24,12 @@
 "Enter your Buckaroo Hosted Fields Client ID, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Entrez votre Buckaroo Hosted Fields Client ID, disponible depuis le Buckaroo Plaza dans → Paramètres → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Enregistrement du jeton</a>."
 "Enter your Buckaroo Hosted Fields Client Secret, obtainable from the Buckaroo Plaza at → Settings → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Token registration</a>.","Entrez votre Buckaroo Hosted Fields Client Secret, disponible depuis le Buckaroo Plaza dans → Paramètres → <a href="https://plaza.buckaroo.nl/Configuration/TokenApi/Applications" target="_blank">Enregistrement du jeton</a>."
 "Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1""","Commande réactivée: Paiement complété après annulation (Notification push reçue). ID de transaction: ""%1"""
+"Transfer","Virement"
+"Thank you for your order. You have chosen to pay by transfer. To complete your order, please transfer the outstanding amount, %1, using the details below.","Merci pour votre commande. Vous avez choisi de régler par virement. Pour finaliser votre commande, veuillez transférer le montant restant, %1, en utilisant les détails ci-dessous."
+"Amount","Montant"
+"Payment reference","Référence de paiement"
+"Accountholder","Titulaire de compte"
+"IBAN","IBAN"
+"BIC","BIC"
+"NB","NB"
+"To ensure that your payment can be processed smoothly, you must quote the payment reference %1 in the description of your transfer. This will enable faster processing of the payment.","Pour garantir le bon déroulement de votre paiement, vous devez indiquer la référence de paiement %1 dans la description de votre transfert. Cela permettra un traitement plus rapide du paiement."
