--- a/i18n/de_CH.csv
+++ b/i18n/de_CH.csv
@@ -503,3 +503,12 @@
 "Expiry Date:","Ablaufdatum:"
 "CVC:","CVC:"
 "Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1""","Bestellung reaktiviert: Zahlung nach Stornierung abgeschlossen (Push-Benachrichtigung erhalten). Transaktions-ID: ""%1"""
+"Transfer","Überweisung"
+"Thank you for your order. You have chosen to pay by transfer. To complete your order, please transfer the outstanding amount, %1, using the details below.","Vielen Dank für Ihre Bestellung. Sie haben sich für die Zahlung per Überweisung entschieden. Um Ihre Bestellung abzuschließen, überweisen Sie bitte den ausstehenden Betrag %1 unter Verwendung der nachstehenden Angaben."
+"Amount","Betrag"
+"Payment reference","Zahlungsreferenz"
+"Accountholder","Kontoinhaber"
+"IBAN","IBAN"
+"BIC","BIC"
+"NB","NB"
+"To ensure that your payment can be processed smoothly, you must quote the payment reference %1 in the description of your transfer. This will enable faster processing of the payment.","Damit Ihre Zahlung reibungslos verarbeitet werden kann, müssen Sie die Zahlungsreferenz %1 in der Beschreibung Ihrer Überweisung. Dies ermöglicht eine schnellere Abwicklung der Zahlung."
