--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -39,3 +39,12 @@
 "Redirect (Buckaroo Hosted Payment Page)","Redirect (Buckaroo Hosted Payment Page)"
 "Select Inline to embed Apple Pay directly within the Magento checkout. Select Redirect to send customers to Buckaroo's secure Hosted Payment Page. Note: When using the Redirect option, Apple Pay can only be offered in the checkout (not in other areas like the mini-cart or product page).","Select Inline to embed Apple Pay directly within the Magento checkout. Select Redirect to send customers to Buckaroo's secure Hosted Payment Page. Note: When using the Redirect option, Apple Pay can only be offered in the checkout (not in other areas like the mini-cart or product page)."
 "Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1""","Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1"""
+"Transfer","Transfer"
+"Thank you for your order. You have chosen to pay by transfer. To complete your order, please transfer the outstanding amount, %1, using the details below.","Thank you for your order. You have chosen to pay by transfer. To complete your order, please transfer the outstanding amount, %1, using the details below."
+"Amount","Amount"
+"Payment reference","Payment reference"
+"Accountholder","Accountholder"
+"IBAN","IBAN"
+"BIC","BIC"
+"NB","NB"
+"To ensure that your payment can be processed smoothly, you must quote the payment reference %1 in the description of your transfer.","To ensure that your payment can be processed smoothly, you must quote the payment reference %1 in the description of your transfer."
