--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -490,3 +490,12 @@
 "Redirect (Buckaroo Hosted Payment Page)","Redirección (Página de pago alojada por Buckaroo)"
 "Select Inline to embed Apple Pay directly within the Magento checkout. Select Redirect to send customers to Buckaroo's secure Hosted Payment Page. Note: When using the Redirect option, Apple Pay can only be offered in the checkout (not in other areas like the mini-cart or product page).","Selecciona Integrado para mostrar Apple Pay directamente en el checkout de Magento. Selecciona Redirección para enviar a los clientes a la página de pago segura alojada por Buckaroo. Nota: Cuando se utiliza la opción Redirección, Apple Pay solo estará disponible en el checkout (no en otras áreas como el mini carrito o la página del producto)."
 "Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1""","Pedido reactivado: Pago completado después de la cancelación (Notificación push recibida). ID de transacción: ""%1"""
+"Transfer","Transferencia"
+"Thank you for your order. You have chosen to pay by transfer. To complete your order, please transfer the outstanding amount, %1, using the details below.","Gracias por su pedido. Ha elegido pagar por transferencia. Para completar su pedido, transfiera el importe pendiente, %1, utilizando los datos que figuran a continuación."
+"Amount","Importe"
+"Payment reference","Referencia de pago"
+"Accountholder","Titular de cuenta"
+"IBAN","IBAN"
+"BIC","BIC"
+"NB","NB"
+"To ensure that your payment can be processed smoothly, you must quote the payment reference %1 in the description of your transfer. This will enable faster processing of the payment.","Para garantizar que su pago pueda procesarse sin problemas, debe citar la referencia de pago %1 en la descripción de su transferencia. Esto permitirá un procesamiento más rápido del pago."
