--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -507,3 +507,7 @@
 "An error occurred, please try another payment method or try again later."."Er is een fout opgetreden, probeer een andere betaalmethode of probeer het later opnieuw."
 "Payment processing failed. Please try again.","Betalingsverwerking mislukt. Probeer het opnieuw."
 "Payment token is missing. Please try again.","Betalingstoken ontbreekt. Probeer het opnieuw."
+"Cancel Order on Browser Back Button","Cancel Order on Browser Back Button"
+"Payment cancelled. You can try again using the same or a different payment method.","Payment cancelled. You can try again using the same or a different payment method."
+"Customer returned using browser back button. Order left pending for push notification.","Customer returned using browser back button. Order left pending for push notification."
+"Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1""","Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1"""
