--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -519,3 +519,7 @@
 "An error occurred, please try another payment method or try again later."."Er is een fout opgetreden, probeer een andere betaalmethode of probeer het later opnieuw."
 "Payment processing failed. Please try again.","Betalingsverwerking mislukt. Probeer het opnieuw."
 "Payment token is missing. Please try again.","Betalingstoken ontbreekt. Probeer het opnieuw."
+"Cancel Order on Browser Back Button","Cancel bestelling bij browser terug-knop"
+"Payment cancelled. You can try again using the same or a different payment method.","Betaling geannuleerd. U kunt het opnieuw proberen met dezelfde of een andere betaalmethode."
+"Customer returned using browser back button. Order left pending for push notification.","Klant is teruggegaan met de browser terug-knop. Bestelling staat nog pending voor push notificatie."
+"Order reactivated: Payment completed after cancellation (Push notification received). Transaction ID: ""%1""","Bestelling opnieuw geactiveerd: Betaling voltooid na annulering (Push notificatie ontvangen). Transactie ID: ""%1"""
