feat: add Second Chance feature with admin configuration and information display

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -517,3 +517,10 @@
 "BIC","BIC"
 "NB","NB"
 "To ensure that your payment can be processed smoothly, you must quote the payment reference %1 in the description of your transfer. This will enable faster processing of the payment.","Damit Ihre Zahlung reibungslos verarbeitet werden kann, müssen Sie die Zahlungsreferenz %1 in der Beschreibung Ihrer Überweisung. Dies ermöglicht eine schnellere Abwicklung der Zahlung."
+"About Second Chance","Über Second Chance"
+"The Second Chance feature allows merchants to automatically send reminder emails to consumers who initiated but did not complete their order or payment. These reminders are sent directly from the Magento store, using your own store's email domain and templates. This ensures full brand consistency and significantly improves conversion rates.","Die Second Chance-Funktion ermöglicht es Händlern, automatisch Erinnerungs-E-Mails an Kunden zu senden, die eine Bestellung oder Zahlung begonnen, aber nicht abgeschlossen haben. Diese Erinnerungen werden direkt aus dem Magento-Shop verschickt, unter Verwendung der eigenen E-Mail-Domain und Vorlagen des Shops. Dies gewährleistet eine vollständige Markenkonsistenz und verbessert die Konversionsraten erheblich."
+"The functionality is completely white-labelled, meaning:","Die Funktionalität ist vollständig White-Label, was bedeutet:"
+"Emails are sent from your own domain and mail servers in Magento.","E-Mails werden von deiner eigenen Domain und den Mailservern in Magento versendet."
+"Templates follow your corporate identity and email design from default Magento e-mail templates.","Vorlagen folgen deinem Corporate Design und basieren auf den Standard-E-Mail-Vorlagen von Magento."
+"Stock availability can optionally be taken into account before sending reminders.","Die Lagerverfügbarkeit kann optional vor dem Versenden von Erinnerungen berücksichtigt werden."
+"First and second reminders can use a different template.","Erste und zweite Erinnerungen können eine andere Vorlage verwenden."
