--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -48,3 +48,10 @@
 "BIC","BIC"
 "NB","NB"
 "To ensure that your payment can be processed smoothly, you must quote the payment reference %1 in the description of your transfer.","To ensure that your payment can be processed smoothly, you must quote the payment reference %1 in the description of your transfer."
+"About Second Chance","About Second Chance"
+"The Second Chance feature allows merchants to automatically send reminder emails to consumers who initiated but did not complete their order or payment. These reminders are sent directly from the Magento store, using your own store's email domain and templates. This ensures full brand consistency and significantly improves conversion rates.","The Second Chance feature allows merchants to automatically send reminder emails to consumers who initiated but did not complete their order or payment. These reminders are sent directly from the Magento store, using your own store's email domain and templates. This ensures full brand consistency and significantly improves conversion rates."
+"The functionality is completely white-labelled, meaning:","The functionality is completely white-labelled, meaning:"
+"Emails are sent from your own domain and mail servers in Magento.","Emails are sent from your own domain and mail servers in Magento."
+"Templates follow your corporate identity and email design from default Magento e-mail templates.","Templates follow your corporate identity and email design from default Magento e-mail templates."
+"Stock availability can optionally be taken into account before sending reminders.","Stock availability can optionally be taken into account before sending reminders."
+"First and second reminders can use a different template.","First and second reminders can use a different template."
