--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -693,3 +693,10 @@
 "BIC","BIC"
 "NB","Let op"
 "To ensure that your payment can be processed smoothly, you must quote the payment reference %1 in the description of your transfer. This will enable faster processing of the payment.","Voor een goede verwerking dient u het betalingskenmerk %1 in de omschrijving van uw overboeking te vermelden. Hiermee kan de betaling sneller afgehandeld worden."
+"About Second Chance","Over Second Chance"
+"The Second Chance feature allows merchants to automatically send reminder emails to consumers who initiated but did not complete their order or payment. These reminders are sent directly from the Magento store, using your own store's email domain and templates. This ensures full brand consistency and significantly improves conversion rates.","De Second Chance-functie stelt merchants in staat om automatisch herinneringsmails te sturen naar consumenten die wel een bestelling of betaling zijn begonnen, maar deze niet hebben afgerond. Deze herinneringen worden rechtstreeks vanuit de Magento-winkel verzonden, met gebruik van het eigen e-maildomein en de sjablonen van de winkel. Dit zorgt voor volledige merkconsistentie en verbetert de conversieratio aanzienlijk."
+"The functionality is completely white-labelled, meaning:","De functionaliteit is volledig white-label, wat betekent dat:"
+"Emails are sent from your own domain and mail servers in Magento.","E-mails worden verzonden vanaf je eigen domein en mailservers in Magento."
+"Templates follow your corporate identity and email design from default Magento e-mail templates.","Sjablonen aansluiten bij je huisstijl en het e-mailontwerp van de standaard Magento-e-mailsjablonen volgen."
+"Stock availability can optionally be taken into account before sending reminders.","De voorraadbeschikbaarheid optioneel kan worden meegenomen voordat herinneringen worden verzonden."
+"First and second reminders can use a different template.","Eerste en tweede herinneringen kunnen een ander sjabloon gebruiken."
