--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -15,7 +15,7 @@
 "Email:","E-mail:"
 "Telephone:","Phone number:"
 "Date of Birth:","Date of birth:"
-"Invoice Handling","Invoice handling"
+"Invoice Handling","Invoice Handling"
 "Create Invoice on Payment","Create Invoice on Payment"
 "Create Invoice on Shipment","Create Invoice on Shipment"
 "Select the moment when the invoice should be created.","Select the moment when the invoice should be created."
