BP-5211-Restructure plugin menu for Payment Methods

--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -17,10 +17,10 @@
 "The above amount is calculated based on de Tax settings in Buckaroo > Settings > Buckaroo Payment Fee Tax Class.","Dit bedrag wordt berekend op basis van de BTW instellingen in Buckaroo > Settings > Buckaroo Payment Fee Tax Class."
 "Payment fee frontend label","Betaaltoeslag label aan de voorkant"
 "This label will be displayed next to the fee on the checkout, order, invoice and creditmemo pages and pdfs.","Het label wordt getoond naast de betaaltoeslag tijdens de checkout en op de order, invoice, creditmemo pagina's en PDF."
-"Max order amount (in Base Currency)","Max. order bedrag (in standaard valuta)"
+"Max order amount","Max. order bedrag"
 "Maximum order amount allowed.","De betaalmethode wordt niet getoond boven max. bedrag."
 "The payment method shows only for orders with an order amount smaller than the maximum amount.","De betaalmethode wordt alleen getoond bij orders met een totaal onder de maximale orderwaarde."
-"Min order amount (in Base Currency)","Min. order bedrag (in standaard valuta)"
+"Min order amount","Min. order bedrag"
 "Minimum order amount allowed.","De betaalmethode wordt niet getoond onder min. bedrag"
 "The payment method shows only for orders with an order amount greater than the minimum amount.","De betaalmethode wordt alleen getoond bij orders met een totaal boven de minimale orderwaarde."
 "Method specific status enabled","Methode specifieke status ingeschakeld"
@@ -571,13 +571,13 @@
 "Credit Management Steps","Credit Management Stappen"
 "Select which payment methods can be used at Transfer.","Selecteer welke betaalmethoden kunnen worden gebruikt bij overboeking."
 "Enable or disable client sided payment method behavior.","Client sided betaalmethode gedrag in- of uitschakelen."
-"Min order amount B2C (in Base Currency)","Minimale bestelhoeveelheid B2C (in basisvaluta)"
+"Min order amount B2C","Minimale bestelhoeveelheid B2C"
 "Minimum order amount allowed for B2C.","Minimale bestelhoeveelheid toegestaan voor B2C."
-"Max order amount B2C (in Base Currency)","Maximale bestelhoeveelheid B2C (in basisvaluta)"
+"Max order amount B2C","Maximale bestelhoeveelheid B2C"
 "Maximum order amount allowed for B2C.","Maximum order amount allowed for B2C."
-"Min order amount B2B (in Base Currency)","Minimale bestelhoeveelheid B2B (in basisvaluta)"
+"Min order amount B2B","Minimale bestelhoeveelheid B2B"
 "Minimum order amount allowed for B2B.","Minimale bestelhoeveelheid toegestaan voor B2B."
-"Max order amount B2B (in Base Currency)","Max order amount B2B (in Base Currency)"
+"Max order amount B2B","Max order amount B2B"
 "Allow customer groups for B2C mode","Klantengroepen toestaan voor B2C"
 "Allow customer groups for B2B mode","Klantengroepen toestaan voor B2B"
 "Spam Prevention","Spampreventie"
@@ -649,8 +649,8 @@
 "Enable Strong Customer Authentication","Strong Customer Authentication	inschakelen"
 "Strong Customer Authentication (also known as SCA) fulfills a set of regulatory requirements, designed to reduce fraud, making online payments more secure while establishing trust with consumers.","Strong Customer Authentication (ook wel bekend als SCA) voldoet aan een reeks wettelijke vereisten die zijn ontworpen om fraude te verminderen, waardoor online betalingen veiliger worden en het vertrouwen van consumenten wordt versterkt."
 "Riverty customer type","Klanttype voor Riverty"
-"Min order amount for B2B (in Base Currency)","Minimale bestelhoeveelheid voor B2B (in standaard valuta)"
-"Max order amount for B2B (in Base Currency)","Maximale bestelhoeveelheid voor B2B (in standaard valuta)"
+"Min order amount for B2B","Minimale bestelhoeveelheid voor B2B"
+"Max order amount for B2B","Maximale bestelhoeveelheid voor B2B"
 "Enable iDIN verification","iDIN verificatie inschakelen"
 "Jan","Jan"
 "Feb","Feb"
