--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -15,10 +15,10 @@
 "The above amount is calculated based on de Tax settings in Buckaroo > Settings > Buckaroo Payment Fee Tax Class.","Dieser Betrag wird basierend auf den Mehrwertsteuereinstellungen berechnet in Buckaroo > Settings > Buckaroo Payment Fee Tax Class."
 "Payment fee frontend label","Zahlungsgebühren-Front-End-Etikett"
 "This label will be displayed next to the fee on the checkout, order, invoice and creditmemo pages and pdfs.","Das Etikett wird beim Checkout neben dem Zahlungsaufschlag sowie auf den Bestell-, Rechnungs-, Gutschriftseiten und im PDF angezeigt."
-"Max order amount (in Base Currency)","Maximaler Bestellbetrag (in Basiswährung)"
+"Max order amount","Maximaler Bestellbetrag"
 "Maximum order amount allowed.","Die Zahlungsmethode wird nicht über dem Höchstbetrag angezeigt."
 "The payment method shows only for orders with an order amount smaller than the maximum amount.","Die Zahlungsart wird nur bei Bestellungen angezeigt, deren Gesamtsumme unter dem maximalen Bestellwert liegt."
-"Min order amount (in Base Currency)","Mindest. Bestellbetrag (in Basiswährung)"
+"Min order amount","Mindest. Bestellbetrag"
 "Minimum order amount allowed.","Die Zahlungsmethode wird nicht unter Mindestbetrag angezeigt"
 "The payment method shows only for orders with an order amount greater than the minimum amount.","Die Zahlungsart wird nur bei Bestellungen mit einem Gesamtwert über dem Mindestbestellwert angezeigt."
 "Method specific status enabled","Methodenspezifischer Status aktiviert"
