--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -14,10 +14,10 @@
 "The above amount is calculated based on de Tax settings in Buckaroo > Settings > Buckaroo Payment Fee Tax Class.","La cantidad anterior se calcula a partir de los ajustes de Impuesto en Buckaroo > Settings > Buckaroo Payment Fee Tax Class."
 "Payment fee frontend label","Etiqueta front-end de tarifa de pago"
 "This label will be displayed next to the fee on the checkout","Esta etiqueta aparecerá junto a la tarifa en la pantalla de compra, el pedido, la factura, las notas de abono y los PDF."
-"Max order amount (in Base Currency)","Importe máx. del pedido (en moneda de base)"
+"Max order amount","Importe máx. del pedido"
 "Maximum order amount allowed.","Importe máximo permitido del pedido."
 "The payment method shows only for orders with an order amount smaller than the maximum amount.","El método de pago solo se muestra en los pedidos con un importe inferior al importe máximo."
-"Min order amount (in Base Currency)","Importe mín. del pedido (en moneda de base)"
+"Min order amount","Importe mín. del pedido"
 "Minimum order amount allowed.","Importe mín. del pedido."
 "The payment method shows only for orders with an order amount greater than the minimum amount.","El método de pago solo se muestra en los pedidos con un importe superior al importe mínimo."
 "Method specific status enabled","Estado específico del método activado"
