--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -15,10 +15,10 @@
 "The above amount is calculated based on de Tax settings in Buckaroo > Settings > Buckaroo Payment Fee Tax Class.","Le montant ci-dessus est calculé en fonction des paramètres de taxe dans Boutiques > Configuration > Ventes > Taxe."
 "Payment fee frontend label","Étiquette frontale des frais de paiement"
 "This label will be displayed next to the fee on the checkout, order, invoice and creditmemo pages and pdfs.","Cette étiquette sera affichée à côté des frais sur les pages de paiement, de commande, de facture et de note de crédit et sur les fichiers .PDF."
-"Max order amount (in Base Currency)","Montant maximum de la commande (en devise de base)"
+"Max order amount","Montant maximum de la commande"
 "Maximum order amount allowed.","Montant maximum de commande autorisé."
 "The payment method shows only for orders with an order amount smaller than the maximum amount.","Le mode de paiement s'affiche uniquement pour les commandes dont le montant est inférieur au montant maximum."
-"Min order amount (in Base Currency)","Montant minimum de la commande (dans la devise de base)"
+"Min order amount","Montant minimum de la commande"
 "Minimum order amount allowed.","Montant minimum de commande autorisé."
 "The payment method shows only for orders with an order amount greater than the minimum amount.","Le mode de paiement s'affiche uniquement pour les commandes dont le montant est supérieur au montant minimum."
 "Method specific status enabled","Statut spécifique à la méthode activé"
