--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -14,10 +14,10 @@
 "The above amount is calculated based on de Tax settings in Buckaroo > Settings > Buckaroo Payment Fee Tax Class.","Dit bedrag wordt berekend op basis van de BTW instellingen in Buckaroo > Settings > Buckaroo Payment Fee Tax Class."
 "Payment fee frontend label","Betaaltoeslag label aan de voorkant"
 "This label will be displayed next to the fee on the checkout, order, invoice and creditmemo pages and pdfs.","Het label wordt getoond naast de betaaltoeslag tijdens de checkout en op de order, invoice, creditmemo pagina's en PDF."
-"Max order amount (in Base Currency)","Max. order bedrag (in basis munteenheid)"
+"Max order amount","Max. order bedrag"
 "Maximum order amount allowed.","De betaalmethode wordt niet getoond boven max. bedrag."
 "The payment method shows only for orders with an order amount smaller than the maximum amount.","De betaalmethode wordt alleen getoond bij orders met een totaal onder de maximale orderwaarde."
-"Min order amount (in Base Currency)","Min. order bedrag (in basis munteenheid)"
+"Min order amount","Min. order bedrag"
 "Minimum order amount allowed.","De betaalmethode wordt niet getoond onder min. bedrag"
 "The payment method shows only for orders with an order amount greater than the minimum amount.","De betaalmethode wordt alleen getoond bij orders met een totaal boven de minimale orderwaarde."
 "Method specific status enabled","Methode specifieke status ingeschakeld"
